--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "setup.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode development"
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "xugaoyang <i@xugaoyang.com>",
@@ -13,17 +13,19 @@
   "devDependencies": {
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": "^3.1.8",
+    "webpack-merge": "^4.1.5"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@material-ui/core": "^3.7.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
