--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node app.js",
+    "deploy": "NODE_ENV=production pm2 start app.js --name community-parse-server",
     "test": "mocha"
   },
   "engines": {
