--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
-    "marked": "^0.5.2",
+    "highlight.js": "^9.13.1",
     "parse": "^2.1.0",
     "prop-types": "^15.6.2",
     "ramda": "^0.26.1",
@@ -40,6 +40,7 @@
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
     "react-infinite-scroller": "^1.2.2",
+    "react-markdown": "^4.0.4",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
