--- a/package.json
+++ b/package.json
@@ -16,9 +16,22 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.2",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-import-resolver-node": "^0.3.2",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-css-modules": "^2.9.1",
+    "eslint-plugin-flowtype": "^2.50.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.11.1",
+    "prettier": "^1.17.1",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
@@ -28,15 +41,16 @@
   "dependencies": {
     "@material-ui/core": "^3.7.0",
     "@material-ui/icons": "^3.0.1",
+    "antd": "^3.18.2",
     "axios": "^0.18.0",
     "date-fns": "^1.30.1",
     "highlight.js": "^9.13.1",
+    "history": "^4.9.0",
+    "moment": "^2.24.0",
     "parse": "^2.1.0",
     "prop-types": "^15.6.2",
     "ramda": "^0.26.1",
     "react": "^16.5.2",
-    "react-alert": "^4.0.4",
-    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
     "react-infinite-scroller": "^1.2.2",
@@ -44,7 +58,6 @@
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-s-alert": "^1.4.1",
     "redux": "^4.0.1"
   }
 }
