--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "prettier": "^1.17.1",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
@@ -47,11 +48,12 @@
     "date-fns": "^1.30.1",
     "highlight.js": "^9.13.1",
     "history": "^4.9.0",
+    "immutability-helper": "^3.0.0",
     "moment": "^2.24.0",
     "parse": "^2.1.0",
     "prop-types": "^15.6.2",
     "ramda": "^0.26.1",
-    "react": "^16.5.2",
+    "react": "^16.8.6",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
     "react-infinite-scroller": "^1.2.2",
