--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "ejs": "^2.6.1",
     "ejs-mate": "^3.0.0",
     "express-fileupload": "^0.4.0",
+    "marked": "^0.6.2",
     "mongoose": "^5.4.0",
+    "nodemailer": "^6.2.1",
     "parse": "^2.1.0",
     "parse-dashboard": "^1.2.0",
     "parse-server": "^3.1.1",
