--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "setup.js",
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "build-dev": "webpack --config webpack.dev.js"
   },
   "keywords": [],
   "author": "xugaoyang <i@xugaoyang.com>",
@@ -33,8 +34,10 @@
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.17.1",
     "style-loader": "^0.23.0",
+    "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.8",
@@ -42,8 +45,6 @@
   },
   "dependencies": {
     "antd": "^3.18.2",
-    "axios": "^0.18.0",
-    "date-fns": "^1.30.1",
     "highlight.js": "^9.13.1",
     "history": "^4.9.0",
     "immutability-helper": "^3.0.0",
