--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-fileupload": "^0.4.0",
     "marked": "^0.6.2",
     "mongoose": "^5.4.0",
+    "nanoid": "^2.0.3",
     "nodemailer": "^6.2.1",
     "parse": "^2.1.0",
     "parse-dashboard": "^1.2.0",
